fixed title and bootlegger text not being white in dark mode

--- a/DarkMode.css
+++ b/DarkMode.css
@@ -26,6 +26,8 @@
 .tab .container .team-special .name,
 .container .title[data-v-3c7c5d00],
 .tab .container .reminder,
+.container .title[data-v-00b98a78],
+.team ul li[data-v-00b98a78],
 .container.positioned .team .name,
 li .name small[data-v-0c1e09ad],
 .token .ability[data-v-52a03550] {
